# defect-rag

./: .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/: design.md
scripts/: download_hf_bottle.py  evaluate_vlm.py  finetune_qwen.py  index_dataset.py  monitor_predictions.py  prepare_finetune_data.py
src/: __init__.py  cli.py  config.py
src/api/: __init__.py  main.py
src/embeddings/: __init__.py  clip_encoder.py
src/frontend/: __init__.py  app.py
src/utils/: __init__.py  data_loader.py  tracker.py
src/vector_db/: __init__.py  qdrant_client.py
src/vlm/: __init__.py  qwen_generator.py
tests/: __init__.py  conftest.py  test_api.py  test_embeddings.py  test_finetune.py  test_pipeline.py  test_tracker.py  test_vector_db.py  test_vlm.py
